# JacobiRoboticsChallenge

./: .gitignore  README.md  pyproject.toml
box_pose_estimation/: README.md  config.yaml  pyproject.toml  run_pose_estimation.py
box_pose_estimation/estimation/: config.yaml  run_pose_estimation.py
box_segmentation/: README.md  pyproject.toml  requirements.txt
box_segmentation/segmentation/: config.yaml  fix_dataset.py  run_segmentation.py  train_segmentation.py
scripts/: run_pose_estimation.sh  run_segmentation.sh  setup_segmentation_env.sh  train_segmentation.sh
